forwardport r985473 from 4.2 branch:

BUG: 188673
- honor the suggested target filename path (absolute
  or relative) so that downloads started via khtml from
  a page with
Content-disposition; ... filename="foo"
use that name.

- always pop up a confirmation dialog in that case
- only when khtml already popped up the filedialog,
  kget doesn't do it

- add back the KIO::Scheduler::checkSlaveOnHold() calls
  from KDE3 times, although I'm not sure whether these are still
  necessary

svn path=/trunk/KDE/kdenetwork/kget/; revision=985971